--- a/views/about.html
+++ b/views/about.html
@@ -3,7 +3,7 @@
 <div class="container">
     <section class="imgContainer">
       <img src="images/Spencer White edited (3).jpg" alt="A picture of Spencer White" id="personalImage">
-    <span class="rowSpan"> <span class="infoSpan">Name: Spencer White</span> <span class="infoSpan"> Location: Detroit, MI</span> <span class="infoSpan"> Age: 24</span></span>
+    <span class="rowSpan"> <span class="infoSpan">Name: Spencer White</span> <span class="infoSpan"> Location: Detroit, MI</span></span>
     </section>
 
     <section class="aboutContent">
