--- a/css/style.css
+++ b/css/style.css
@@ -173,12 +173,12 @@ div.workContainer {
   float: left;
 }
 
-#worksImage {
+.worksImage {
   width: 95%;
   height: 220px;
 }
 
-#worksImage:hover {
+.worksImage:hover {
   border: 2px solid white;
 }
 
