Added FF7 Project

--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -35,5 +35,9 @@
     <a href="http://codepen.io/Swhite215/full/zZLJJj/" target="_blank"><img src="images/finalfantasy1tribute.PNG" alt="An HTML and CSS Project" class="worksImage"></a>
   </div>
 
+  <div class="workContainer">
+    <a href="http://codepen.io/Swhite215/full/peOeaN/" target="_blank"><img src="images/finalfantasy7tribute.PNG" alt="An HTML and CSS Project" class="worksImage"></a>
+  </div>
+
 
 </div>
