Addition of FF8 and Medminder

--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -4,7 +4,7 @@
   <h1 id="portfolioHeader">Selected Works</h1>
 
   <div class="workContainer">
-    <a href="https://swhite215.github.io/Full-Stack-Shopping-Cart/" target="_blank"><img src="images/fssc.PNG" alt="A Three.JS Framework Project" class="worksImage"></a>
+    <a href="https://medminderapp.herokuapp.com/" target="_blank"><img src="images/medminder.PNG" alt="Medinder Application" class="worksImage"></a>
   </div>
 
   <div class="workContainer">
@@ -37,6 +37,10 @@
 
   <div class="workContainer">
     <a href="http://codepen.io/Swhite215/full/peOeaN/" target="_blank"><img src="images/finalfantasy7tribute.PNG" alt="An HTML and CSS Project" class="worksImage"></a>
+  </div>
+
+  <div class="workContainer">
+    <a href="http://codepen.io/Swhite215/full/aJRbgB/" target="_blank"><img src="images/finalfantasy8tribute.PNG" alt="An HTML and CSS Project" class="worksImage"></a>
   </div>
 
 
