--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ img#personalImage {;
 div.workContainer {
   width: 30%;
   height: 224px;
-  margin-bottom: 5%;
+  margin-bottom: 8%;
   margin-left: 2%;
   display: inline;
   float: left;
@@ -180,6 +180,11 @@ div.workContainer {
 
 .worksImage:hover {
   border: 2px solid white;
+}
+
+div.workContainer p {
+  color: white;
+  font-family: 'Cinzel', serif;
 }
 
 /* Project Styling */
