Altered Portfolio Image

--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -39,8 +39,8 @@
 
   <div class="workContainer">
     <a href="https://swhite215.github.io/Cute-Animal-Angular-API/" target="_blank"><img src="images/cutie.PNG" alt="A API project with Angular" class="worksImage"></a>
-    <p>Project: Animal Display API</p>
-    <p>Stack: AngularJS | HTML5 | CSS3</p>
+    <p>Project: Responsive Animal Display</p>
+    <p>Stack: AngularJS | Bootstrap | HTML5 | CSS3</p>
   </div>
 
   <div class="workContainer">
