Altered visibility of descriptions and responsiveness

--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -33,7 +33,7 @@
   <div class="workContainer">
     <a href="https://swhite215.github.io/Angular-To-Do-List-Application/" target="_blank"><img src="images/taskList.PNG" alt="A To-Do List Project" class="worksImage"></a>
     <p>Project: Angular To-Do List</p>
-    <p>Stack: AngularJS | HTML5 | CSS3</p>
+    <p>Stack: AngularJS |Bootstrap | HTML5 | CSS3</p>
   </div>
 
 
