--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ div.workContainer {
 div.workContainer p {
   color: white;
   font-family: 'Cinzel', serif;
+  background-color: rgba(0,0,0,0.7);
 }
 
 /* Project Styling */
@@ -237,6 +238,9 @@ i:hover {
     margin-bottom: 10%;
     display: inline;
     float: left;
+  }
+  header nav {
+    background-color: rgba(0,0,0,0.7);
   }
 }
 
